--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "atom-svn-commit",
   "main": "./lib/svn-commit",
   "version": "0.0.0",
-  "description": "Simple SVN commit plugin for the Atom editor to `svn ci` the current working file with a commit message right in the editor.",
+  "description": "Simple SVN commit plugin for the Atom editor to commit the current working file to the repository with a commit message right in the editor.",
   "keywords": ["atom-svn-commit"],
   "activationCommands": {
     "atom-workspace": "svn-commit:commit"
